# claude-smart

./: .gitignore  .gitmodules  ARCHITECTURE.md  DEVELOPER.md  Makefile  README.md  TROUBLESHOOTING.md  main.py  package.json  pyproject.toml
.claude-plugin/: marketplace.json
dashboard/: AGENTS.md  package.json
plugin/: README.md  pyproject.toml
plugin/.claude-plugin/: plugin.json
plugin/commands/: clear-all.md  dashboard.md  learn.md  restart.md  show.md  smart-correct.md  smart-playbook.md  smart-sync.md  tag.md
plugin/dashboard/: .gitignore  package-lock.json  package.json
plugin/dashboard/app/: layout.tsx
plugin/dashboard/app/api/config/: route.ts
plugin/dashboard/app/api/health/: route.ts
plugin/dashboard/app/api/reflexio/[...path]/: route.ts
plugin/dashboard/app/api/sessions/: route.ts
plugin/dashboard/app/configure/: layout.tsx  page.tsx
plugin/dashboard/app/configure/env/: page.tsx
plugin/dashboard/app/configure/server/: page.tsx
plugin/dashboard/app/dashboard/: page.tsx
plugin/dashboard/app/interactions/: page.tsx
plugin/dashboard/app/interactions/[sessionId]/: page.tsx
plugin/dashboard/app/playbooks/: page.tsx
plugin/dashboard/app/playbooks/[id]/: page.tsx
plugin/dashboard/app/profiles/: page.tsx
plugin/dashboard/app/profiles/[id]/: page.tsx
plugin/dashboard/app/sessions/: page.tsx
plugin/dashboard/app/sessions/[sessionId]/: page.tsx
plugin/dashboard/components/common/: empty-state.tsx  learnings-badge.tsx  page-header.tsx  stat-card.tsx
plugin/dashboard/components/layout/: nav-items.ts  top-bar.tsx
plugin/dashboard/hooks/: use-settings.tsx
plugin/dashboard/lib/: config-file.ts  reflexio-url.ts  session-reader.ts  types.ts
plugin/hooks/: hooks.json
plugin/scripts/: _lib.sh  backend-service.sh  dashboard-build.sh  dashboard-open.sh  dashboard-service.sh  ensure-plugin-root.sh  hook_entry.sh  smart-install.sh
plugin/src/claude_smart/: __init__.py  cli.py  context_format.py  context_inject.py  cs_cite.py  hook.py  ids.py  internal_call.py  publish.py  reflexio_adapter.py  state.py
plugin/src/claude_smart/events/: post_tool.py  pre_tool.py  session_end.py  session_start.py  stop.py  user_prompt.py
scripts/: setup-local-dev.sh
tests/: conftest.py  test_adapter.py  test_cli_learn.py  test_cli_restart.py  test_context_format.py  test_cs_cite.py  test_events.py  test_ids.py  test_state.py  (+2 more)
(+58 files in other folders)
