[project]
name = "claude-smart"
version = "0.1.5"
description = "Self-improving Claude Code plugin — learns from corrections via reflexio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "reflexio-ai",
    # Used by reflexio's local embedding provider (ONNXMiniLM_L6_V2).
    # Pulls in onnxruntime + tokenizers; the ~80 MB ONNX model itself is
    # downloaded on first use, not at install time.
    "chromadb>=0.5",
]

[project.scripts]
claude-smart-hook = "claude_smart.hook:main"
claude-smart = "claude_smart.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_smart"]

[tool.hatch.build.targets.sdist]
include = [
    "src/claude_smart",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["../tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
