[project]
name = "claude-smart"
version = "0.1.11"
description = "Self-improving Claude Code plugin — learns from corrections via reflexio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "reflexio-ai>=0.2.15",
    # Used by reflexio's local embedding provider (ONNXMiniLM_L6_V2).
    # Pulls in onnxruntime + tokenizers; the ~80 MB ONNX model itself is
    # downloaded on first use, not at install time.
    "chromadb>=0.5",
]

[project.scripts]
claude-smart-hook = "claude_smart.hook:main"
claude-smart = "claude_smart.cli:main"

# NOTE: LOCAL DEV ONLY — do not commit this block to main.
# Published installs must resolve reflexio-ai from PyPI. This override
# points at the vendored submodule so editable changes flow through.
# `git update-index --skip-worktree plugin/pyproject.toml plugin/uv.lock`
# hides the local divergence from `git status`.
# [tool.uv.sources]
# reflexio-ai = { path = "../reflexio", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_smart"]

[tool.hatch.build.targets.sdist]
include = [
    "src/claude_smart",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["../tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
